--- a/WPF_SmartCity_MathiasThomassen_201706287/WPF_SmartCity_MathiasThomassen_201706287/App.xaml
+++ b/WPF_SmartCity_MathiasThomassen_201706287/WPF_SmartCity_MathiasThomassen_201706287/App.xaml
@@ -81,15 +81,25 @@
             <Setter Property="Margin" Value="20,12,0,13"></Setter>
             <Setter Property="Height" Value="30px"></Setter>
             <Setter Property="Width" Value="90px"></Setter>
+            <Setter Property="FontFamily" Value="sans-serif"></Setter>
+            <Setter Property="FontWeight" Value="Bold"></Setter>
+            
 
         </Style>
         <Style x:Key="MainTBOXstyle" TargetType="{x:Type TextBox}">
-            <Setter Property="IsReadOnly" Value="True"></Setter>
             <Setter Property="HorizontalAlignment" Value="Left"></Setter>
             <Setter Property="VerticalAlignment" Value="Center"></Setter>
             <Setter Property="Width" Value="240px"></Setter>
             <Setter Property="Height" Value="30px"></Setter>
+            <Setter Property="FontSize" Value="12pt"></Setter>
+            <Setter Property="FontFamily" Value="Consolas"></Setter>
+            <Setter Property="BorderThickness" Value="4"></Setter>
         </Style>
 
+        <!--<Style x:Key="textblock_currStyle" TargetType="{x:Type Control}">
+            <Setter Property="FontSize" Value="12pt"></Setter>
+            <Setter Property="FontFamily" Value="Consolas"></Setter>
+            <Setter Property="BorderThickness" Value="4"></Setter>
+        </Style>-->
     </Application.Resources>
 </Application>
