--- a/WPF_SmartCity_MathiasThomassen_201706287/WPF_SmartCity_MathiasThomassen_201706287/Views/Main.xaml
+++ b/WPF_SmartCity_MathiasThomassen_201706287/WPF_SmartCity_MathiasThomassen_201706287/Views/Main.xaml
@@ -1,14 +1,20 @@
-﻿<Window x:Class="WPF_SmartCity_MathiasThomassen_201706287.Views.Main"
+﻿<Window x:Name="Smart_City" x:Class="WPF_SmartCity_MathiasThomassen_201706287.Views.Main"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_SmartCity_MathiasThomassen_201706287.Views"
+        xmlns:viewModels="clr-namespace:WPF_SmartCity_MathiasThomassen_201706287.ViewModels"
         mc:Ignorable="d"
-        Title="Main" Height="550" Width="1080"
+        Title="Smart City" Height="550" Width="1080"
         Background="{StaticResource ResourceKey=BackGroundBrush}"
-        ResizeMode="NoResize">
-        
+        ResizeMode="NoResize"
+        >
+
+    <Window.DataContext>
+        <viewModels:MainViewModel/>
+    </Window.DataContext>
+
     <DockPanel>
         <Menu DockPanel.Dock="Top" Name="Menu">
             <MenuItem Header="_File">
@@ -18,20 +24,27 @@
                 <MenuItem Header="E_xit" Command="{Binding}"></MenuItem>
             </MenuItem>
         </Menu>
-        
+
 
         <ToolBar DockPanel.Dock="Top"
                  Height="50"
                  Background="ForestGreen"
                  FontSize="20">
-            
+
             <Button ToolTip="Add new location"
-                    Command="{Binding}"
+                    Command="{Binding Path=AddNewLocationCommand}"
                     Style="{StaticResource ResourceKey=Button}">
-                    Add location
+                Add location
             </Button>
         </ToolBar>
-        <Grid Margin="0,10,0,0">
+
+        <StatusBar DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Height="25px" Background="ForestGreen">
+
+
+        </StatusBar>
+
+
+        <Grid Margin="0,10,0,0" Width="1053">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
@@ -39,35 +52,86 @@
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition MinWidth="110" Width="110"></ColumnDefinition>
+                <ColumnDefinition MinWidth="350" Width="350"></ColumnDefinition>
+                <ColumnDefinition Width="5"></ColumnDefinition>
+                <ColumnDefinition MinWidth="601" Width="601"></ColumnDefinition>
+
             </Grid.ColumnDefinitions>
 
-        <!--Labels-->
-            <Label Grid.Row="0" Grid.Column="0" Name="IDlabel" Style="{StaticResource MainLabelStyle}">ID</Label>
-            <Label Grid.Row="1" Grid.Column="0" Name="namelabel" Style="{StaticResource MainLabelStyle}">Name</Label>
-            <Label Grid.Row="2" Grid.Column="0" Name="streetlabel" Style="{StaticResource MainLabelStyle}">Street</Label>
-            <Label Grid.Row="3" Grid.Column="0" Name="streetnrlabel" Style="{StaticResource MainLabelStyle}">StreetNumber</Label>
-            <Label Grid.Row="4" Grid.Column="0" Name="postallabel" Style="{StaticResource MainLabelStyle}">Postal</Label>
-            <Label Grid.Row="5" Grid.Column="0" Name="citylabel" Style="{StaticResource MainLabelStyle}">City</Label>
-            <Label Grid.Row="6" Grid.Column="0" Name="treelabel" Style="{StaticResource MainLabelStyle}" VerticalAlignment="Top">Trees</Label>
+            <GridSplitter Width="5" Grid.Column="2" Grid.RowSpan="10" HorizontalAlignment="Stretch"></GridSplitter>
 
-        <!--Textboxes-->
-        
-            <TextBox Grid.Row="0" Grid.Column="1" Name="IDbox" Style="{StaticResource MainTBOXstyle}" Width="100px"></TextBox>
-            <TextBox Grid.Row="1" Grid.Column="1" Name="namebox" Style="{StaticResource MainTBOXstyle}"></TextBox>
-            <TextBox Grid.Row="2" Grid.Column="1" Name="streetbox"  Style="{StaticResource MainTBOXstyle}"></TextBox>
-            <TextBox Grid.Row="3" Grid.Column="1" Name="streetnrbox"  Style="{StaticResource MainTBOXstyle}"></TextBox>
-            <TextBox Grid.Row="4" Grid.Column="1" Name="postalbox"  Style="{StaticResource MainTBOXstyle}"></TextBox>
-            <TextBox Grid.Row="5" Grid.Column="1" Name="citybox"  Style="{StaticResource MainTBOXstyle}"></TextBox>
+            <!--Labels-->
+            <Label Grid.Row="0" Grid.Column="0" Name="IDlabel" Style="{StaticResource MainLabelStyle}" Margin="20,10,0,10">ID</Label>
+            <Label Grid.Row="1" Grid.Column="0" Name="namelabel" Style="{StaticResource MainLabelStyle}" Margin="20,10,0,10">Name</Label>
+            <Label Grid.Row="2" Grid.Column="0" Name="streetlabel" Style="{StaticResource MainLabelStyle}" Margin="20,10,0,10">Street</Label>
+            <Label Grid.Row="3" Grid.Column="0" Name="streetnrlabel" Style="{StaticResource MainLabelStyle}" Margin="20,10,0,10">StreetNumber</Label>
+            <Label Grid.Row="3" Grid.Column="1" Name="postallabel" Style="{StaticResource MainLabelStyle}" Margin="110,10,0,10" Width="69">Postal</Label>
+            <Label Grid.Row="4" Grid.Column="0" Name="citylabel" Style="{StaticResource MainLabelStyle}" Margin="20,10,0,10">City</Label>
+            <Label Grid.Row="5" Grid.Column="0" Name="treelabel" Style="{StaticResource MainLabelStyle}" VerticalAlignment="Top" Margin="20,10,0,0">Trees</Label>
 
-        </Grid> 
-        
-        
+            <!--Textboxes-->
+
+            <TextBox Grid.Row="0" Grid.Column="1" Name="IDbox" Style="{StaticResource MainTBOXstyle}" Width="100px" Margin="0,10" Text="{Binding Path=CurrLocation.LocationId}" IsReadOnly="True"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Name="namebox" Style="{StaticResource MainTBOXstyle}" Margin="0,10" Text="{Binding Path=CurrLocation.Name}" Width="245"></TextBox>
+            <TextBox Grid.Row="2" Grid.Column="1" Name="streetbox"  Style="{StaticResource MainTBOXstyle}" Margin="0,10" Text="{Binding Path=CurrLocation.Street}" Width="245"></TextBox>
+            <TextBox Grid.Row="3" Grid.Column="1" Name="streetnrbox"  Style="{StaticResource MainTBOXstyle}" Margin="0,10" Text="{Binding Path=CurrLocation.StreetNr}" Width="100"></TextBox>
+            <TextBox Grid.Row="3" Grid.Column="1" Name="postalbox"  Style="{StaticResource MainTBOXstyle}" Margin="179,10,0,10" Text="{Binding Path=CurrLocation.Postal}" Width="66"></TextBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Name="citybox"  Style="{StaticResource MainTBOXstyle}" Margin="0,10,0,10" Text="{Binding Path=CurrLocation.City}" Width="245"></TextBox>
+
+            <!--Listview-->
+            <ListView Grid.Row="5" Grid.Column="1" Margin="0,10" Name="ListViewTrees" Width="300px" HorizontalAlignment="Left" ItemsSource="{Binding Path=CurrLocation.Trees}" Grid.RowSpan="2">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Path=number}" FontWeight="Bold"/>
+                            <TextBlock Text=", "></TextBlock>
+                            <TextBlock Text="{Binding Path=Sort}" FontWeight="Bold"/>
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <!--Search box-->
+            <Label Grid.Column="3" Grid.Row="0" Style="{StaticResource MainLabelStyle}" VerticalAlignment="Center" Margin="256,10,0,10">Search:</Label>
+            <TextBox Grid.Column="3" Grid.Row="0" Width="200" Name="txtToSearch" Style="{StaticResource MainTBOXstyle}" IsReadOnly="False" Margin="351,10,0,10" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <ListBox Grid.Column="3"
+                     Grid.Row="1"
+                     Grid.RowSpan="5"
+                     Margin="66,20,50,0"
+                     Name="lstData"
+                     ItemsSource="{Binding Path=Location}"
+                     SelectedItem="{Binding Path=CurrLocation}"
+                     SelectedIndex="{Binding Path=CurrIndex}"
+                     IsSynchronizedWithCurrentItem="True"
+                     
+                     >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Path=LocationId}" FontWeight="Bold"/>
+                            <TextBlock Text=" - "/>
+                            <TextBlock Text="{Binding Path=Name}" FontWeight="Bold"/>
+                            <TextBlock Text=" - "/>
+                            <TextBlock Text="{Binding Path=Street}" FontWeight="Bold"/>
+                            <TextBlock Text=" - "/>
+                            <TextBlock Text="{Binding Path=StreetNr}" FontWeight="Bold"/>
+                            <TextBlock Text=" - "/>
+                            <TextBlock Text="{Binding Path=Postal}" FontWeight="Bold"/>
+                            <TextBlock Text=" - "/>
+                            <TextBlock Text="{Binding Path=City}" FontWeight="Bold"/>
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+
+        </Grid>
+
 
     </DockPanel>
 </Window>
