--- a/WPF_SmartCity_MathiasThomassen_201706287/ASPNET_SmartCity_MathiasThomassen_201706287/Views/Sensors/Create.cshtml
+++ b/WPF_SmartCity_MathiasThomassen_201706287/ASPNET_SmartCity_MathiasThomassen_201706287/Views/Sensors/Create.cshtml
@@ -14,9 +14,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LocationId" class="control-label"></label>
-                <input asp-for="LocationId" class="form-control" />
-                <span asp-validation-for="LocationId" class="text-danger"></span>
+                <input asp-for="LocationId" class="form-control" type="hidden"/>
             </div>
             <div class="form-group">
                 <label asp-for="TreeSort" class="control-label"></label>
