--- a/WPF_SmartCity_MathiasThomassen_201706287/ASPNET_SmartCity_MathiasThomassen_201706287/Views/Sensors/Index.cshtml
+++ b/WPF_SmartCity_MathiasThomassen_201706287/ASPNET_SmartCity_MathiasThomassen_201706287/Views/Sensors/Index.cshtml
@@ -9,6 +9,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a asp-action="UploadFile">Upload file</a>
 </p>
 <table class="table">
     <thead>
@@ -46,7 +47,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SensorId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SensorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SensorId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.SensorId">Delete</a> |
+                <a asp-action="Create" asp-route-id="@item."></a>
             </td>
         </tr>
 }
